--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "heic2any": "^0.0.4",
     "howler": "^2.2.4",
     "image-resize-compress": "^2.1.1",
-    "lightbox.js-react": "^1.0.9",
     "linkify-html": "^4.1.3",
     "linkify-string": "^4.1.3",
     "linkifyjs": "^4.1.3",
@@ -65,6 +64,7 @@
     "wagmi": "^2.8.1",
     "wavesurfer.js": "^7.9.9",
     "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.24.0",
     "yup": "^0.32.11"
   },
   "scripts": {
