--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.10",
     "@iconify/react": "^4.0.0",
+    "@llamaindex/pdf-viewer": "^1.3.0",
     "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.11.1",
     "@react-oauth/google": "^0.12.2",
