--- a/.env.internal
+++ b/.env.internal
@@ -1,8 +1,8 @@
 VITE_DOMAIN=http://localhost:5511
-VITE_API_URL=https://api-internal.ermis.network
+VITE_API_URL=https://api-test.ermis.network
 VITE_WALLET_CONNECT_PROJECT_ID=b7269aa7b1593b2f400e38a23a53b42b
-VITE_API_KEY=NdDl9JA8y4me8o2ne7VUTGiS83eG9qKR
-VITE_CHAT_PROJECT_ID=314fdf00-cb57-4ec0-9026-d660f6607c34
+VITE_API_KEY=sXhcPu0JneUbQ6TG2tXePK8MC2tBAHn9
+VITE_CHAT_PROJECT_ID=ec964975-ae84-4a8e-91a1-222ca3aeeef8
 VITE_GOOGLE_CLIENT_ID=627177543690-6auhc93esd9crfb741ejf7guc5gg0787.apps.googleusercontent.com
 PORT=5511
 HOST=0.0.0.0
