--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@iconify/react": "^4.0.0",
     "@llamaindex/pdf-viewer": "^1.3.0",
+    "@lottiefiles/lottie-player": "^2.0.12",
     "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.11.1",
     "@react-oauth/google": "^0.12.2",
@@ -35,7 +36,9 @@
     "linkify-html": "^4.1.3",
     "linkify-string": "^4.1.3",
     "linkifyjs": "^4.1.3",
+    "lottie-react": "^2.4.1",
     "material-ui-popup-state": "^5.3.3",
+    "pako": "^2.1.0",
     "phosphor-react": "^1.4.1",
     "prettier": "^3.2.5",
     "process": "^0.11.10",
