--- a/.env.internal
+++ b/.env.internal
@@ -1,8 +1,8 @@
-VITE_DOMAIN=http://localhost:5511
+VITE_DOMAIN=https://chat-internal.ermis.network
 VITE_API_URL=https://api-test.ermis.network
 VITE_WALLET_CONNECT_PROJECT_ID=b7269aa7b1593b2f400e38a23a53b42b
-VITE_API_KEY=sXhcPu0JneUbQ6TG2tXePK8MC2tBAHn9
-VITE_CHAT_PROJECT_ID=ec964975-ae84-4a8e-91a1-222ca3aeeef8
+VITE_API_KEY=kUCqqbfEQxkZge7HHDFcIxfoHzqSZUam
+VITE_CHAT_PROJECT_ID=b44937e4-c0d4-4a73-847c-3730a923ce83
 VITE_GOOGLE_CLIENT_ID=627177543690-6auhc93esd9crfb741ejf7guc5gg0787.apps.googleusercontent.com
 PORT=5511
 HOST=0.0.0.0
