--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Echat...!",
-  "name": "Echat chat app",
+  "short_name": "Echat",
+  "name": "Echat app",
   "icons": [
     {
       "src": "favicon.ico",
