--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-dropzone": "^14.3.5",
     "react-flip-move": "^3.0.5",
     "react-hook-form": "^7.41.0",
-    "react-i18next": "^11.18.6",
+    "react-i18next": "^13.2.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
@@ -69,7 +69,8 @@
     "wavesurfer.js": "^7.9.9",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.24.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "i18next": "^23.10.1"
   },
   "scripts": {
     "dev": "vite",
