--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "dayjs": "^1.11.10",
     "emoji-mart": "^5.2.2",
     "env-cmd": "^10.1.0",
-    "ermis-chat-js-sdk": "^1.7.4",
+    "ermis-chat-js-sdk": "^1.7.5",
     "event-source-polyfill": "^1.0.31",
     "flatted": "^3.3.1",
     "framer-motion": "^7.5.3",
     "heic2any": "^0.0.4",
     "howler": "^2.2.4",
+    "i18next": "^23.10.1",
     "image-resize-compress": "^2.1.1",
     "linkify-html": "^4.1.3",
     "linkify-string": "^4.1.3",
@@ -69,8 +70,7 @@
     "wavesurfer.js": "^7.9.9",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.24.0",
-    "yup": "^0.32.11",
-    "i18next": "^23.10.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "vite",
